<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeoCatch</string>
    <string name="click">Click To Continue...</string>
    <string name="lab">Mobile Cloud Computing</string>
    <string name="greeting">Bitte drücke \"Menü\"</string>
    <string name="greeting2">um deinen Namen zu ändern!</string>
    <string name="copyright">- © MCC10 Group3 - RWTH Aachen -</string>
    <string name="set_game_name">Spielname festlegen:</string>
    <string name="set_player_count">Spieleranzahl festlegen:</string>
    <string name="set_timer">Timer einstellen:</string>
    <string name="update_player_count">8 Spieler</string>
    <string name="text_change_name">Spielername ändern:</string>
    <string name="mainmenu_loading">Laden...</string>
     <string name="members_gamestate">Mitglieder:</string>
 	 <string name="description_count">Spieleranzahl:</string>
 	  <string name="description_distance">Entfernung zum Spielersteller:</string>
    
    
    <string name="times">Wartezeit wählen</string>
    <string-array name="array_times">
    	<item>1  min</item>
        <item>3  min</item>
        <item>6  min</item>
        <item>9  min</item>
        <item>12 min</item>
        <item>15 min</item>
    </string-array>
    <string-array name="array_times_values">
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>15</item>
    </string-array>
    
    
    <string-array name="array_listsize">
        <item>10 Spiele</item>
        <item>20 Spiele</item>
        <item>30 Spiele</item>
        <item>50 Spiele</item>
    </string-array>
    <string-array name="array_listsize_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    
     <string name="helps">Hilfe zu:</string>
     <string-array name="array_helps">
    	<item>Startseite</item>
        <item>Neues Spiel</item>
        <item>Spiel beitreten</item>
        <item>Spiel verlassen</item>
        <item>Spielanleitung</item>
        <item>Spielregeln</item>
        <item>Power-Ups</item>
        
    </string-array>
    
</resources>
